fix mobile alignment

--- a/style.less
+++ b/style.less
@@ -142,9 +142,8 @@ body {
 		width:100%;
 
 		.menu-toggle {
-			/*color:#fff;*/
 			float:right;
-			margin-top:-42px;
+			margin-top:-55px;
 		}
 		.menu {
 			margin-left:0;
